--- a/Contact.css
+++ b/Contact.css
@@ -33,7 +33,7 @@
     height: 70px;
     align-items: center;
     list-style: none;
-    color: #df246e;
+    color: rgb(237, 120, 120);
     font-weight: bold;
     display: flex;
     align-items: center;
@@ -65,6 +65,8 @@
 .navbar-mobile {
     display: none;
     cursor: pointer
+    
+    
 }
 
 .fa {
@@ -72,6 +74,7 @@
 }
 
 .navbar-mobile-container {
+    background-color: rgb(250, 251, 252);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -80,7 +83,7 @@
 
 @media (max-width:800px) {
     .navbar-mobile {
-        background-color:black;
+        background-color:rgb(237, 120, 120);;
         display: flex;
         justify-content: space-evenly;
         width: 100%;
@@ -122,7 +125,7 @@ a:hover {
 
 .burger-list {
     display: none;
-    background-color: #2f2f2f;
+    background-color:rgb(237, 120, 120);;
     border-top: #ffffff;
     position: absolute;
     height: 100px;
@@ -134,14 +137,15 @@ a:hover {
 
 
 .burger-list ul {
+    line-height: 10px;
     list-style: none;
     position: absolute;
     text-align: center;
     border-radius: 7px;
     padding: 10px;
-    color: #ffffff;
+    color: #100f0f;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 15px;
     text-align: center;
     width: 100%;
     height: 100%;
@@ -222,7 +226,9 @@ a {
     width: 100%;
 }
 body{
-    background-image: url(image/vetement.jpg);
+    /* background: url(image/R\ \(1\).jpg) no-reapet;
+    background-size: cover; */
+    
     
 }
 
@@ -231,11 +237,9 @@ body{
     /* background-image: url(image/vetement.jpg); */
     text-align: center;
     white-space:100%;
-
-
+    background: url(image/beautiful-young-muslim-woman-happy-holding-shopping-bag_8595-28618.jpg) no-repeat;
+    background-size: cover;
     
-
-
 }
 #contactForm h2{
     font-size: 100%;
@@ -257,19 +261,23 @@ input#name{
     height: 10%;
     font-size: 100%;
     width: 30%;
+    margin-right: 10%;
 }
 input#email{
     height: 10%;
     font-size: 100%;
     width: 30%;
+    margin-right: 10%;
 }
 #Envoyer{
     font-size:xx-large;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    height: 10%;
+    height: 100%;
     font-size: 100%;
-    width: 10%;
+    width: 30%;
     margin-bottom: 10%;
+    border-radius: 10%;
+    
 
 }
 /* #contactForm.name.email.message{
