--- a/FAQ.css
+++ b/FAQ.css
@@ -4,8 +4,8 @@
 }
 .burger-list {
   display: none;
-  background-color: #2f2f2f;
-  border-top: #ffffff;
+  background-color:;
+  border-top: #0a0909;
   position: absolute;
   height: 100px;
   width: 100%;
@@ -16,14 +16,15 @@
 
 
 .burger-list ul {
+  line-height: 10px;
   list-style: none;
   position: absolute;
   text-align: center;
   border-radius: 7px;
   padding: 10px;
-  color: #ffffff;
+  color: #131313;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 25px;
   text-align: center;
   width: 100%;
   height: 100%;
@@ -31,26 +32,26 @@
   flex-direction: column;
   justify-content: space-between;
 }
-.burger-list {
+/* .burger-list {
   display: none;
   background-color: #2f2f2f;
-  border-top: #ffffff;
+  border-top: #0e0d0d;
   position: absolute;
   height: 100px;
   width: 100%;
   right: 0;
   z-index: 100;
-}
+} */
 
 
 
-.burger-list ul {
+/* .burger-list ul {
   list-style: none;
   position: absolute;
   text-align: center;
   border-radius: 7px;
   padding: 10px;
-  color: #ffffff;
+  color: #0f0f0f;
   font-weight: 500;
   font-size: 14px;
   text-align: center;
@@ -58,8 +59,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-}
+  justify-content: space-between; */
 .announcement__text {
     background-color:rgb(237, 120, 120); 
     font-size: 12px;
@@ -109,7 +109,7 @@
   height: 70px;
   align-items: center;
   list-style: none;
-  color: #df246e;
+
   font-weight: bold;
   display: flex;
   align-items: center;
@@ -148,6 +148,7 @@
 }
 
 .navbar-mobile-container {
+  
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -156,7 +157,7 @@
 
 @media (max-width:800px) {
   .navbar-mobile {
-      background-color:black;
+      background-color:rgb(255, 252, 252);
       display: flex;
       justify-content: space-evenly;
       width: 100%;
@@ -198,8 +199,8 @@ a:hover {
 
 .burger-list {
   display: none;
-  background-color: #2f2f2f;
-  border-top: #ffffff;
+   background-color:rgb(237, 120, 120);
+  border-top: #9b9999;
   position: absolute;
   height: 100px;
   width: 100%;
@@ -215,7 +216,7 @@ a:hover {
   text-align: center;
   border-radius: 7px;
   padding: 10px;
-  color: #ffffff;
+  color: #0a0a0a;
   font-weight: 500;
   font-size: 14px;
   text-align: center;
@@ -232,8 +233,15 @@ a:hover {
 a {
   all: unset;
   cursor: pointer;
+  color: rgb(237, 120, 120);;
 }
+    .foter a{
     
+        all: unset;
+        cursor: pointer;
+        color: rgb(8, 8, 8);;
+  
+    }
 
 
 .hero {
