--- a/Nouvelle-collection.css
+++ b/Nouvelle-collection.css
@@ -19,7 +19,7 @@
     height: 70px;
     align-items: center;
     list-style: none;
-    color: #df246e;
+    color:rgb(237, 120, 120);;
     font-weight: bold;
     display: flex;
     align-items: center;
@@ -58,6 +58,7 @@
 }
 
 .navbar-mobile-container {
+    background-color: #ffffff;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -66,7 +67,7 @@
 
 @media (max-width:800px) {
     .navbar-mobile {
-        background-color:black;
+        background-color:rgb(237, 120, 120);;
         display: flex;
         justify-content: space-evenly;
         width: 100%;
@@ -108,7 +109,7 @@ a:hover {
 
 .burger-list {
     display: none;
-    background-color: #2f2f2f;
+    background-color:rgb(237, 120, 120);;
     border-top: #ffffff;
     position: absolute;
     height: 100px;
@@ -125,9 +126,9 @@ a:hover {
     text-align: center;
     border-radius: 7px;
     padding: 10px;
-    color: #ffffff;
+    color: #030303;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 15px;
     text-align: center;
     width: 100%;
     height: 100%;
@@ -231,7 +232,7 @@ a {
     width: 100%;
 }
 
-.Soldes p{
+.nouvelle p{
     font-size: 3rem;
     text-align: center;
     text-decoration: underline;
