--- a/catalogue.css
+++ b/catalogue.css
@@ -45,6 +45,7 @@
 
 
 .burger-list ul {
+    line-height: 10px;
     list-style: none;
     position: absolute;
     text-align: center;
@@ -52,7 +53,7 @@
     padding: 10px;
     color: #ffffff;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 25px;
     text-align: center;
     width: 100%;
     height: 100%;
