--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@
     height: 70px;
     align-items: center;
     list-style: none;
-    color: #df246e;
+    color: rgb(237, 120, 120);
     font-weight: bold;
     display: flex;
     align-items: center;
@@ -75,17 +75,22 @@
 }
 
 .nav-logo {
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 20px;
+
 }
 
 #logo {
-    width: 80px;
-    height: 70px;
-    padding: 5px;
+    width: 100px;
+    height: 100px;
+    padding: 10px;
+    align-items: center;
+   
+
 }
 .logos {
     display: flex;
@@ -158,8 +163,15 @@ body{
 }
  a{
     text-decoration: none;
-    color: black; 
+    color: black;    
+     color: rgb(237, 120, 120);
+
 } 
+.foter a{
+    text-decoration: none;
+    color: black;    
+     
+}
 
 .hero {
     display: flex;
@@ -216,7 +228,7 @@ body{
     text-align: center;
 }
 body{
-    background: url(image/home.jpg) center top no-repeat ;
+    background: url(image/1000_F_619324339_CDuCalb2Ln4zpE8OBj0x6mLjgV5zhXkC.jpg) center top no-repeat ;
     background-size: cover;
     height: 80vh;
     
@@ -273,7 +285,7 @@ body{
 
 .burger-list {
     display: none;
-    background-color: #2f2f2f;
+    background-color:rgb(237, 120, 120);
     border-top: #ffffff;
     position: absolute;
     height: 100px;
@@ -285,14 +297,15 @@ body{
 
 
 .burger-list ul {
+    line-height: 10px;
     list-style: none;
     position: absolute;
     text-align: center;
     border-radius: 7px;
     padding: 10px;
-    color: #ffffff;
+    color: rgb(237, 120, 120);
     font-weight: 500;
-    font-size: 14px;
+    font-size: 15px;
     text-align: center;
     width: 100%;
     height: 100%;
