--- a/FAQ.css
+++ b/FAQ.css
@@ -1,7 +1,4 @@
-* {
-    margin: 0px;
-    padding: 0px;
-}
+
 .burger-list {
   display: none;
   background-color:;
@@ -13,6 +10,10 @@
   z-index: 100;
 }
 
+.foter{
+  padding: 48px !important;
+  width: 100% !important;
+}
 
 
 .burger-list ul {
@@ -32,34 +33,7 @@
   flex-direction: column;
   justify-content: space-between;
 }
-/* .burger-list {
-  display: none;
-  background-color: #2f2f2f;
-  border-top: #0e0d0d;
-  position: absolute;
-  height: 100px;
-  width: 100%;
-  right: 0;
-  z-index: 100;
-} */
 
-
-
-/* .burger-list ul {
-  list-style: none;
-  position: absolute;
-  text-align: center;
-  border-radius: 7px;
-  padding: 10px;
-  color: #0f0f0f;
-  font-weight: 500;
-  font-size: 14px;
-  text-align: center;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between; */
 .announcement__text {
     background-color:rgb(237, 120, 120); 
     font-size: 12px;
@@ -98,12 +72,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* font-family: "Karla" sans-serif; */
+ 
 
 }
-/* navbar */
+
 .navbar {
-  /* position: fixed; */
+ 
   background-color:white;
   width: 100%;
   height: 70px;
@@ -155,6 +129,34 @@
   padding: 0 20px 0 20px;
 }
 
+@media (max-width:900px) {
+  *{
+    margin: 0px !important;
+    padding: 0px !important;
+   
+   
+}
+body,html{
+  width: 100% !important;
+}
+.foter{
+  flex-direction: column;
+  justify-content: space-between;
+}
+  .accordion{
+    flex-direction:column;
+  }
+  #accordion-img{
+    width:80% !important;
+  margin-left: 9% !important;
+    display: flex;
+    justify-content: center;
+  }
+  .content-accordion{
+    padding: 9% !important;
+  }
+  
+}
 @media (max-width:800px) {
   .navbar-mobile {
       background-color:rgb(255, 252, 252);
@@ -191,9 +193,6 @@
 
 
 
-a:hover {
-  color: white;
-}
 
 
 
@@ -233,7 +232,7 @@ a:hover {
 a {
   all: unset;
   cursor: pointer;
-  color: rgb(237, 120, 120);;
+  color: rgb(4, 4, 4);;
 }
     .foter a{
     
@@ -255,8 +254,7 @@ a {
     justify-content: space-between;
      background-color:rgb(237, 120, 120);
     background-size: cover;
-    /* margin-top: 400px; */
-    /* Redimensionner l'image de manière à la couvrir  */
+   
       width: 100%;
       height: 40vh;
     
@@ -267,8 +265,7 @@ a {
 
 .logo {
     color: black;
-    /* font-weight: ; */
-
+   
     margin-bottom: 100%;
 }
 
@@ -305,12 +302,13 @@ a {
 
    
   } 
-    
+
   .accordion {
+    display: flex;
     position: relative;
     justify-content: space-between;
     margin-bottom: 50%;
-    display: flex
+
 
   }
   #accordion-img{
@@ -329,10 +327,7 @@ a {
   }
   
   .content-accordion {
-    margin-top: 35px;
-     margin-left: 80px;
-     padding-left: 10%;
-     height: 90vh;
+  padding:9%;
 
   }
   
@@ -348,7 +343,7 @@ a {
   
   .accordion-img {
     position: relative;
-    /* width: 50%; */
+    
   }
   
   .title-question {
@@ -395,20 +390,13 @@ a {
       display: flex;
     }
   
-    /* .accordion-img {
-      position: relative;
-      width: 420px;
-      top: 88px;
-    } */
+  
   
     .question-answer {
       width: 380px;
     }
   
-    .content-accordion {
-      margin-top: 85px;
-    }
-  
+
     .title {
       margin-top: 50px;
       font-size: 3rem;
