--- a/Nouvelle-collection.css
+++ b/Nouvelle-collection.css
@@ -1,7 +1,8 @@
-* {
-    margin: 0px;
-    padding: 0px;
-}
+html,body{
+    padding:0;
+    margin:0;
+  }
+  
 
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;500;700&display=swap');
 * {
@@ -101,15 +102,12 @@
 
 
 
-a:hover {
-    color: white;
-}
 
 
 
 .burger-list {
     display: none;
-    background-color:rgb(237, 120, 120);;
+    background-color:rgb(237, 120, 120);
     border-top: #ffffff;
     position: absolute;
     height: 100px;
@@ -143,6 +141,7 @@ a:hover {
 a {
     all: unset;
     cursor: pointer;
+    color: #000;
 
 }
 .announcement__text {
@@ -183,37 +182,13 @@ a {
     align-items: center;
     padding: 10%;
 }
-.foter {
-    display: flex;
-    justify-content: space-between;
-     background-color:rgb(237, 120, 120);
-    background-size: cover;
-    /* margin-top: 400px; */
-    /* Redimensionner l'image de manière à la couvrir  */
-      width: 100%;
-      height: 40vh;
-    
-    
 
-
-}
 
 .logo {
     color: black;
     /* font-weight: ; */
 
     margin-bottom: 100%;
-}
-
-.foter ul {
-     padding: 10%;
-    list-style: none; 
-    /* vous supprimez complètement les marqueurs par défaut */
-
-}
-
-.foter li {
-    padding-bottom: 10%;
 }
 
 
@@ -302,4 +277,53 @@ a {
     cursor: pointer;
 }
      
+
+/* Mobile menu display */
+@media (max-width: 800px) {
+    .navbar {
+        display: none;
+    }
+    .navbar-mobile {
+        display: block;
+    }
+    .burger-list {
+        display: flex;
+        flex-direction: column;
+    }
+}
+.foter {
+    display: flex;
+    justify-content: space-between;
+     background-color:rgb(237, 120, 120);
+    background-size: cover;
+    padding: 48px !important;
+  width: 100% !important;
+  height: 40vh;
+   
+}
+.foter ul {
+    padding: 10%;
+   list-style: none; 
+}
+   @media (max-width:900px) {
+    *{
+      margin: 0px !important;
+      padding: 0px !important;
+     
+     
+  }
+  body,html{
+    width: 100% !important;
+  }
+  .foter{
+    flex-direction: column;
+    justify-content: space-between;
+  }
+   
+   
+}
+
+.foter li {
+   padding-bottom: 10%;
+}
 
