--- a/catalogue.css
+++ b/catalogue.css
@@ -2,6 +2,9 @@
     margin: 0px;
     padding: 0px;
 }
+.footer{
+    padding: 48px;
+}
 .burger-list {
     display: none;
     background-color: #2f2f2f;
