--- a/index.css
+++ b/index.css
@@ -4,12 +4,30 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* font-family: "Karla" sans-serif; */
+
 
 }
-/* navbar */
+.foter{
+    padding: 48px;
+}
+body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    background: url(image/home.jpg) center top no-repeat;
+    background-size: cover;
+    height: 80vh;
+}
+
+
+html {
+    margin: 0;
+    padding: 0;
+}
+
+
 .navbar {
-    /* position: fixed; */
+    
     background-color: transparent;
     width: 100%;
     height: 70px;
@@ -101,9 +119,6 @@
 
 
 
-a:hover {
-    color: white;
-}
 
 
 
@@ -127,8 +142,7 @@ body{
     font-size: 20px;
     text-decoration: none;
     margin: 0 10px  ;
-    position: relative; /* Pour positionner la ligne de soulignement */
-    color: #000;
+    position: relative; 
     font-size:x-large;  
 }
 .right:hover::after {
@@ -137,15 +151,15 @@ body{
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 2px; /* Hauteur de la ligne de soulignement */
-    background-color: #000; /* Couleur de la ligne de soulignement */
+    height: 2px; 
+    background-color: #000; 
 }
  .left {
     float: left;
     font-size: 20px;
     text-decoration: none;
     margin: 0 10px  ;
-    position: relative; /* Pour positionner la ligne de soulignement */
+    position: relative;
     color: #000;
     font-size:x-large;  
 }
@@ -157,14 +171,14 @@ body{
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 2px; /* Hauteur de la ligne de soulignement */
-    background-color: #000; /* Couleur de la ligne de soulignement */
+    height: 2px; 
+    background-color: #000; 
 
 }
  a{
     text-decoration: none;
     color: black;    
-     color: rgb(237, 120, 120);
+     color: rgb(14, 13, 13);
 
 } 
 .foter a{
@@ -188,7 +202,7 @@ body{
     /* margin-top: 400px; */
     /* Redimensionner l'image de manière à la couvrir  */
       width: 100%;
-      height: 40vh;
+   
 
 }
 .foter ul {
@@ -228,21 +242,12 @@ body{
     text-align: center;
 }
 body{
-    background: url(image/1000_F_619324339_CDuCalb2Ln4zpE8OBj0x6mLjgV5zhXkC.jpg) center top no-repeat ;
+    background: url(image/home.jpg) center top no-repeat ;
     background-size: cover;
     height: 80vh;
-    
-
-    /* height: 100%;
-    width: 100%; */
 }
-/* .container{
-    
-    position: relative;
-    height: 100vh;
-     background-size:cover;
 
-} */
+ 
 .pupliaction{
     position: absolute;
     top: 12rem;
@@ -313,3 +318,20 @@ body{
     flex-direction: column;
     justify-content: space-between;
 }
+
+
+@media (max-width:900px) {
+    *{
+      margin: 0px !important;
+      padding: 0px !important;
+    }
+      .foter{
+        padding: 91px !important;
+        flex-direction: column !important;
+        justify-content: space-between !important;
+      }
+      body,html{
+
+        width: 100% !important;
+      }
+    }
