--- a/soldes.css
+++ b/soldes.css
@@ -1,7 +1,9 @@
-* {
-    margin: 0px;
-    padding: 0px;
-}
+
+html,body{
+    padding:0;
+    margin:0;
+  }
+  
 
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;500;700&display=swap');
 * {
@@ -19,7 +21,7 @@
     height: 70px;
     align-items: center;
     list-style: none;
-    color: rgb(237, 120, 120);;
+    color: rgb(237, 120, 120);
     font-weight: bold;
     display: flex;
     align-items: center;
@@ -100,9 +102,7 @@
 
 
 
-a:hover {
-    color: white;
-}
+
 
 
 
@@ -112,11 +112,12 @@ a:hover {
 a {
     all: unset;
     cursor: pointer;
+    color: #000;
 
 }
 .burger-list {
     display: none;
-    background-color:rgb(237, 120, 120);;
+    background-color:rgb(237, 120, 120);
     border-top: #ffffff;
     position: absolute;
     height: 100px;
@@ -183,20 +184,7 @@ body{
     align-items: center;
     padding: 10%;
 }
-.foter {
-    display: flex;
-    justify-content: space-between;
-     background-color:rgb(237, 120, 120);
-    background-size: cover;
-    /* margin-top: 400px; */
-    /* Redimensionner l'image de manière à la couvrir  */
-      width: 100%;
-      height: 40vh;
-    
-    
 
-
-}
 
 .logo {
     color: black;
@@ -205,16 +193,6 @@ body{
     margin-bottom: 100%;
 }
 
-.foter ul {
-     padding: 10%;
-    list-style: none; 
-    /* vous supprimez complètement les marqueurs par défaut */
-
-}
-
-.foter li {
-    padding-bottom: 10%;
-}
 
 
 
@@ -340,3 +318,38 @@ body{
     }
 } 
 
+.foter {
+    display: flex;
+    justify-content: space-between;
+     background-color:rgb(237, 120, 120);
+    background-size: cover;
+    padding: 48px !important;
+  width: 100% !important;
+  height: 40vh;
+   
+}
+.foter ul {
+    padding: 10%;
+   list-style: none; 
+}
+   @media (max-width:900px) {
+    *{
+      margin: 0px !important;
+      padding: 0px !important;
+     
+     
+  }
+  body,html{
+    width: 100% !important;
+  }
+  .foter{
+    flex-direction: column;
+    justify-content: space-between;
+  }
+   
+   
+}
+
+.foter li {
+   padding-bottom: 10%;
+}
